--- a/frontend/src/styles/search.scss
+++ b/frontend/src/styles/search.scss
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    .search.icon {
+    .search-icon {
         position: absolute;
         left: 30px;
         color: #919191;
@@ -14,6 +14,7 @@
     input {
         width: calc(100% - 80px);
         height: 30px;
+        border: none;
         border-radius: 20px;
         padding-left: 50px;
         outline: none;
