--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -3,11 +3,12 @@
   align-items: center;
   justify-content: space-between;
   .sidebar{
-    width: 35%;
+    width: 30%;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
     height: 100vh;
-    border-right: 1px solid #ddd;
+    border-right: 1px solid #dddddd;
   }
   .body{
     flex: 1;
