--- a/frontend/src/styles/chatform.scss
+++ b/frontend/src/styles/chatform.scss
@@ -1,6 +1,6 @@
 .chat-form{
     background: #ededed;
-    min-height: 60px;
+    min-height: 59px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -28,6 +28,24 @@
         padding: 0 20px;
         outline: none;
         font-size: 16px;
-        color: #555;
+        color: #555555;
+    }
+    .sound-wawe{
+        position: absolute;
+        width: 5px;
+        height: 20px;
+        right: 60px;
+    }
+    .file-share{
+        position: relative;
+        input{
+            width: 25px;
+            height: 30px;
+            opacity: 0;
+            position: absolute;
+            left: 15px;
+            z-index: 1;
+            cursor: pointer;
+        }
     }
 }
