--- a/frontend/src/styles/chatheader.scss
+++ b/frontend/src/styles/chatheader.scss
@@ -13,9 +13,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background: #eee;
+        background: #eeeeee;
         font-size: 25px;
-        color: #555;
+        color: #555555;
         img{
             width: 100%;
             height: 100%;
@@ -33,12 +33,12 @@
         }
         .desc {
             margin: 0;
-            color: #333333;
+            color: #00000099;
             font-size: 15px;
         }
     }
 
-    .action-items{
+    .action-buttons{
         color: #919191;
         .icon-block{
             padding: 10px;
