--- a/frontend/src/styles/chatlist.scss
+++ b/frontend/src/styles/chatlist.scss
@@ -27,8 +27,8 @@
         }
         .timestamp {
             position: absolute;
-            top: 50px;
-            right: 50px;
+            top: 25px;
+            right: 15px;
             font-size: 12px;
             color: #00000073;
         }
@@ -56,7 +56,7 @@
     }
     .chat-description {
         margin: 0;
-        color: #333333;
+        color: #00000099;
         font-size: 15px;
     }
 }
